SERVER-22169 Avoid deadlock with LegacyCatalogManager's lock pinger thread when swapping CatalogManager